--- a/pages/pk/timepage/timepage.wxml
+++ b/pages/pk/timepage/timepage.wxml
@@ -154,13 +154,155 @@
 
 
 
-        <view wx:if="{{posts&&posts.length>0}}" class="css z3 ">
+        <view wx:if="{{posts&&posts.length>0}}" class="css z3">
             <view class="h-50"></view>
             <view class="css" wx:for="{{posts}}" wx:for-index="bindex" wx:for-item="post" wx:key="postkey">
-          
-                <view class="rss" >
+                <view class="css">
+                    <view class="rss" >
+                        <view class="css " style="width: 16vw">
+                            <view class="css">
 
-                    <view class="css" style="width: 16vw">
+
+                                <view class="css"> 
+
+                                    <view class="rcc">
+                                    
+                                        <navigator hover-class="none" class="rcc" url="/pages/pk/userPublishPost/userPublishPost?userId={{post.creator.userId}}">
+                                            <image class="rcc circle2 box8 " src="{{post.creator.imgUrl}}" mode="aspectFill"></image>
+                                        </navigator>
+                            
+                                    </view>
+
+                                </view>
+                                <view class="h-10"></view>
+                                <view class="rcc pl-2vw pr-2vw"><view class="line-2-center fs-25 fw-610 c-username">{{post.creator.userName}}</view></view>
+                            </view>   
+
+                                
+
+
+                            
+                        </view>
+                        <view class="rss" style="width:78vw">
+                                <view class="css" style="flex:1">
+                                    <view class="css" style="" >
+                                        <view class="css">
+                                   
+                                            <view class="css">
+
+
+                                                <view  wx:if="{{!post.postImages||post.postImages.length===0}}">
+                                                </view> 
+                                                <view  wx:elif="{{post.postImages.length===1}}" class="rus">
+                                                    <image class="rcc br-10"  style="width: 76.2vw;height:60vw" src="{{post.postImages[0].imgUrl}}" mode="aspectFill"></image>
+                                                </view> 
+                                                <view  wx:elif="{{post.postImages.length===2}}" class="css">
+                                                    <view class="rcs">
+                                                        <image class="rcc br-10"  style="width: 37.8vw;height:37.8vw" src="{{post.postImages[0].imgUrl}}?x-oss-process=image/resize,h_600,m_lfit" mode="aspectFill"></image>
+                                                        <view style="width: 0.6vw"></view>
+                                                        <image class="rcc br-10" style="width: 37.8vw;height:37.8vw" src="{{post.postImages[1].imgUrl}}?x-oss-process=image/resize,h_600,m_lfit" mode="aspectFill"></image>
+                                                    </view>
+                                        
+                                                </view>
+                                                <view  wx:elif="{{post.postImages.length===4}}" class="css">
+                                                    <view class="rcs">
+                                                        <image class="rcc br-10"  style="width: 37.8vw;height:37.8vw" src="{{post.postImages[0].imgUrl}}?x-oss-process=image/resize,w_600,m_lfit" mode="aspectFill"></image>
+                                                        <view style="width: 0.6vw"></view>
+                                                        <image class="rcc br-10" style="width: 37.8vw;height:37.8vw" src="{{post.postImages[1].imgUrl}}?x-oss-process=image/resize,w_600,m_lfit" mode="aspectFill"></image>
+                                                    </view>
+                                                    <view style="height: 0.6vw"></view>
+                                                    <view class="rcs">
+                                                        <image class="rcc br-10"  style="width: 37.8vw;height:37.8vw" src="{{post.postImages[2].imgUrl}}?x-oss-process=image/resize,w_600,m_lfit" mode="aspectFill"></image>
+                                                        <view style="width: 0.6vw"></view>
+                                                        <image class="rcc br-10" style="width: 37.8vw;height:37.8vw" src="{{post.postImages[3].imgUrl}}?x-oss-process=image/resize,w_600,m_lfit" mode="aspectFill"></image>
+                                                    </view>
+                                                </view>
+                                                <view wx:else class="css">
+                                                    <view hidden="{{post.postImages.length===0}}" class="rcs">
+                                                        <image class="rcc br-10"  style="width: 25vw;height:25vw" src="{{post.postImages[0].imgUrl}}?x-oss-process=image/resize,w_400,m_lfit" mode="aspectFill"></image>
+                                                        <view style="width: 0.6vw"></view>
+                                                        <image class="rcc br-10" style="width: 25vw;height:25vw" src="{{post.postImages[1].imgUrl}}?x-oss-process=image/resize,w_400,m_lfit" mode="aspectFill"></image>
+                                                        <view style="width: 0.6vw"></view>
+                                                        <image class="rcc br-10" style="width: 25vw;height:25vw" src="{{post.postImages[2].imgUrl}}?x-oss-process=image/resize,w_400,m_lfit" mode="aspectFill"></image>
+                                                    </view>
+                                                    <view hidden="{{post.postImages.length<4}}" style="height: 0.6vw"></view>
+                                                    <view hidden="{{post.postImages.length<4}}" class="rcs">
+                                                        <image class="rcc  br-10"  style="width: 25vw;height:25vw" src="{{post.postImages[3].imgUrl}}?x-oss-process=image/resize,w_400,m_lfit" mode="aspectFill"></image>
+                                                        <view style="width: 0.6vw"></view>
+                                                        <image class="rcc  br-10" style="width: 25vw;height:25vw" src="{{post.postImages[4].imgUrl}}?x-oss-process=image/resize,w_400,m_lfit" mode="aspectFill"></image>
+                                                        <view style="width: 0.6vw"></view>
+                                                        <image class="rcc  br-10" style="width: 25vw;height:25vw" src="{{post.postImages[5].imgUrl}}?x-oss-process=image/resize,w_400,m_lfit" mode="aspectFill"></image>
+                                                    </view> 
+                                                    <view hidden="{{post.postImages.length<7}}" style="height: 0.6vw"></view>
+                                                    <view hidden="{{post.postImages.length<7}}" class="rcs">
+                                                        <image class="rcc br-10"  style="width: 25vw;height:25vw" src="{{post.postImages[6].imgUrl}}?x-oss-process=image/resize,w_400,m_lfit" mode="aspectFill"></image>
+                                                        <view style="width: 0.6vw"></view>
+                                                        <image class="rcc br-10" style="width: 25vw;height:25vw" src="{{post.postImages[7].imgUrl}}?x-oss-process=image/resize,w_400,m_lfit" mode="aspectFill"></image>
+                                                        <view style="width: 0.6vw"></view>
+                                                        <image class="rcc br-10" style="width: 25vw;height:25vw" src="{{post.postImages[8].imgUrl}}?x-oss-process=image/resize,w_400,m_lfit" mode="aspectFill"></image>
+                                                    </view>
+                                                </view>
+                                                <view wx:if="{{!post.postImages||post.postImages.length===0}}" class="css">
+                                                    <view class="csc p-50 b-timepage br-20" style="min-height:400rpx">
+                                                        <view class="line-5-center fs-40 fw-700 c-white">{{post.topic}}</view>
+                                                    </view>
+                                                    
+                                                </view>
+                                                <view wx:else class="{{post.tag?'rus fs-30 fw-500':'rus line-3-start fs-30 fw-500'}} " bindtap="openText" data-index="{{bindex}}" >{{post.topic}}</view>
+                                                
+                                                <view class="h-10"></view>
+
+                                            </view>
+                                        </view>
+                                    </view>
+                               
+                                
+                                </view>
+                                
+        
+                        </view>
+                    </view>
+                    <view class="rss" >
+                        <view class="rcc" style="width: 16vw">
+
+                            <view class="rcc">
+                                <view class="rcc fs-20 fw-300 line-1-start pl-10 pr-10 pt-5 pb-5 br-5 b-48 c-4">刚刚</view>
+                            </view>
+                        </view>
+                        <view class="rss" style="width:78vw">
+                                <view class="css" style="flex:1">
+                        
+                                    <view class="rbc-nowrap ">
+                                        <view class="rcc pt-20 pb-20">
+                                            <image class="rcc w-25 h-25" src="/images/daka.png" mode="aspectFill"></image>
+                                            <view class="w-10"></view>
+                                            <view class="fs-25 fw-400 c-word-6">第{{post.postTimes}}次在此打卡</view>
+                                            <view class="w-10"></view>
+                                            <view hidden="{{post.creator.userId != user.userId  ||  (bindex === 0 && post.postId === pk.topPostId)  }}" class="fs-20 fw-300 pl-10 pr-10 br-5 b-48 c-4" bindtap="removePost" data-post="{{post}}" data-pkid="{{pk.pkId}}" data-index="{{bindex}}">删除</view>
+                                        </view>
+                                    
+                                        <view class="rcc">
+                                            <view hidden="{{pk.user.userId != user.userId || (post.postImages.length===0 || pk.topPostId === post.postId)}}" class="w-50"></view>
+                                            <view hidden="{{pk.user.userId != user.userId || (post.postImages.length===0 || pk.topPostId === post.postId)}}" bindtap="hiddenPost" data-post="{{post}}" data-pkid="{{pk.pkId}}" data-index="{{bindex}}" class="fs-25 fw-300 pt-20 pb-20">隐藏</view>
+                                            <view hidden="{{pk.user.userId != user.userId || post.postImages.length===0 || pk.topPostId === post.postId}}" class="w-50"></view>
+                                            <view hidden="{{pk.user.userId != user.userId || post.postImages.length===0 || pk.topPostId === post.postId}}" class="fs-25 fw-300 pt-20 pb-20" bindtap="topPost" data-post="{{post}}" data-pkid="{{pk.pkId}}" data-index="{{bindex}}">顶置</view>
+                                            <view hidden="{{!(bindex === 0 && post.postId === pk.topPostId)}}" class="rcc fs-20 c-1 b-48 fw-400 pl-20 pr-20 pt-10 pb-10 br-10" style="pointer-events: none">已顶置</view>
+                                        </view>
+                                    </view>
+                                
+                                </view>
+                                
+        
+                        </view>
+                    </view>
+                </view>
+                <view class="h-30 b-line"></view>
+                <view class="h-30"></view>
+
+
+
+                <!-- <view class="rss" >
+                    <view class="css" style="width: 19vw">
                             <view class="rcc">
                                 <view class="rcc circle1">
                                     <navigator hover-class="none" class="rcc" url="/pages/pk/userPublishPost/userPublishPost?userId={{post.creator.userId}}">
@@ -169,15 +311,7 @@
                                 </view>
 
                             </view>
-                            <!-- <view class="rss" style="height: 1vw">
-                                <view class="" style="flex:1"></view>
-                                <view class="time-line1" style="flex:1"></view>
-                            </view>
-                            <view class="ccc">
-                                <view class="fs-21 fw-300 c-4">21:20</view>
-                                <view class="fs-21 fw-300 c-4">昨天</view>
-
-                            </view> -->
+                        
                             <view class="rss" style="flex:1">
                                 <view class="" style="flex:1"></view>
                                 <view class="" style="flex:1"></view>
@@ -190,9 +324,9 @@
                                 <view class="css" style="" >
                                     <view class="css">
                                         <view class="css">
-                                            <!-- <view class="h-5"></view> -->
+                                  
                                             <view class="rbc-nowrap">
-                                                <view class="rus line-1-start fs-30 fw-610 c-username f-shadow3" style="flex:1">{{post.creator.userName}}</view>
+                                                <view class="rus line-1-start fs-30 fw-610 c-username" style="flex:1">{{post.creator.userName}}</view>
                                                 <view  class="rcc" >
                                                     <view class="w-100"></view>
                                                     <view wx:if="{{(bindex === 0 && post.postId === pk.topPostId)}}" class="rcc fs-20 c-1 b-48 fw-400 pl-20 pr-20 pt-10 pb-10 br-10" style="pointer-events: none">顶置</view>
@@ -201,13 +335,13 @@
                                                     </view>
                                                 </view>
                                             </view>
-                                            <view class="{{post.tag?'rus fs-32 fw-400':'rus line-3-start fs-32 fw-400'}} " bindtap="openText" data-index="{{bindex}}" >{{post.topic}}</view>
-                                            <view class="h-10"></view>
+
                                         </view>
                                         <view class="css">
 
-                                                
-                                            <!-- 9张图片 -->
+                                            <view class="{{post.tag?'rus fs-32 fw-400':'rus line-3-start fs-32 fw-400'}} " bindtap="openText" data-index="{{bindex}}" >{{post.topic}}</view>
+                                            <view class="h-10"></view>
+                                 
                                             <view  wx:if="{{post.postImages.length===1}}" class="rus">
                                                 <image class="rcc br-10"  style="width: 76.2vw;height:60vw" src="{{post.postImages[0].imgUrl}}" mode="aspectFill"></image>
                                             </view> 
@@ -270,13 +404,13 @@
                                         <view class="w-10"></view>
                                         <view hidden="{{post.creator.userId != user.userId  ||  (bindex === 0 && post.postId === pk.topPostId)  }}" class="fs-20 fw-300 pl-10 pr-10 br-5 b-48 c-4" bindtap="removePost" data-post="{{post}}" data-pkid="{{pk.pkId}}" data-index="{{bindex}}">删除</view>
                                     </view>
-                                    <!-- 随着天数增加，会变得越来越长 -->
+                                
                                     <view class="rcc">
                                         <view hidden="{{pk.user.userId != user.userId || (post.postImages.length===0 || pk.topPostId === post.postId)}}" class="w-50"></view>
                                         <view hidden="{{pk.user.userId != user.userId || (post.postImages.length===0 || pk.topPostId === post.postId)}}" bindtap="hiddenPost" data-post="{{post}}" data-pkid="{{pk.pkId}}" data-index="{{bindex}}" class="fs-25 fw-300 pt-20 pb-20">隐藏</view>
                                         <view hidden="{{pk.user.userId != user.userId || post.postImages.length===0 || pk.topPostId === post.postId}}" class="w-50"></view>
                                         <view hidden="{{pk.user.userId != user.userId || post.postImages.length===0 || pk.topPostId === post.postId}}" class="fs-25 fw-300 pt-20 pb-20" bindtap="topPost" data-post="{{post}}" data-pkid="{{pk.pkId}}" data-index="{{bindex}}">顶置</view>
-                                        <!-- 预留评论和点赞 -->
+                                 
                                     </view>
                                 </view>
                              
@@ -285,8 +419,8 @@
     
                     </view>
                 </view>
-                <view class="h-30 b-line"></view>
-                <view class="h-30"></view>
+                 <view class="h-30 b-line"></view>
+                <view class="h-30"></view> -->
             </view>
             <view class="css h-300">
                 <view hidden="{{!nomore}}" class="{{imgBack?'rcc h-100 fs-30 fw-400 c-white':'rcc h-100 fs-30 fw-400 c-3'}} ">没有更多...</view>
