--- a/style/custom2.wxss
+++ b/style/custom2.wxss
@@ -28,7 +28,7 @@
   text-shadow: 0px 1px 1px rgb(202, 202, 202);
 }
 .f-shadow4{
-  text-shadow: 0px 1px 1px rgb(143, 143, 143);
+  text-shadow: 0px 1px 1px rgb(99, 99, 99);
 }
 .f-shadow1{
   text-shadow: 2px 2px 2px rgb(161, 161, 161);
@@ -678,6 +678,7 @@
 .w-1vw{
   width: 1vw;
 }
+
 .w-28vw{
   width: 28vw;
 }
@@ -1105,6 +1106,12 @@ mw-200{
 .b-complain{
   background-image: linear-gradient(to bottom, #c3e93bea , #b9e201e8 );
 }
+.b-timepage{
+  background-color: rgba(229, 126, 0, 0.949);
+}
+.b-drawPost{
+  background-color: rgb(37, 35, 35);
+}
 .b-publish1{
   background-image: linear-gradient(to bottom, #00c0f0ea , #00b1dde8  );
 }
@@ -1390,6 +1397,9 @@ mw-200{
 }
 .br-10{
   border-radius: 10rpx;
+}
+.br-1vw{
+  border-radius: 1vw;
 }
 .br-10vw{
   border-radius: 10vw;
@@ -2768,13 +2778,7 @@ input {
   bottom: 90vw;
 }
 
-.circle1{
-  /* width:8vw; */
-  /* height: 8vw; */
-  /* border-radius: 8vw; */
-  /* border: 1.5px solid #507999;  */
-  /* border: 1px solid rgb(255, 145, 0);  */
-}
+
 .circle2{
   width:10vw;
   border-radius: 10rpx;
@@ -2796,3 +2800,31 @@ input {
   color: #507999;
 }
 
+
+
+
+.ticket {
+  width: 90vw;
+  height: 100px;
+  position: relative;
+  background: rgb(250, 250, 250);
+  margin: 0 auto;
+}
+.ticket:before,
+.ticket:after {
+  content: '';
+  display: block;
+  width: 20px;
+  height: 100%;
+  background-size: 20px 20px; /* 一个repeat的大小 */
+  background-repeat: repeat-y;
+  background-image: radial-gradient(#fff 8px, transparent 8px);
+  position: absolute;
+  top: 0;
+}
+.ticket:before {
+  left: -10px; /* 半圆，只显示一个repeat的一半 */
+}
+.ticket:after {
+  right: -10px; 
+} 
