--- a/pages/pk/timepage/timepage.wxml
+++ b/pages/pk/timepage/timepage.wxml
@@ -179,7 +179,13 @@
                             </view>   
 
                                 
-
+                            <view class="ccc">
+                                <view class="h-50"></view>
+                                <view hidden="{{pk.user.userId != user.userId || (post.postImages.length===0 || pk.topPostId === post.postId)}}" bindtap="hiddenPost" data-post="{{post}}" data-pkid="{{pk.pkId}}" data-index="{{bindex}}" class="fs-23 fw-300 pl-10 pr-10 br-5 b-48 c-4">隐藏</view>
+                                <view hidden="{{pk.user.userId != user.userId || post.postImages.length===0 || pk.topPostId === post.postId}}" class="h-50"></view>
+                                <view hidden="{{pk.user.userId != user.userId || post.postImages.length===0 || pk.topPostId === post.postId}}" class="fs-23 fw-300 pl-10 pr-10 br-5 b-48 c-4" bindtap="topPost" data-post="{{post}}" data-pkid="{{pk.pkId}}" data-index="{{bindex}}">顶置</view>
+                           
+                            </view>
 
                             
                         </view>
@@ -243,7 +249,7 @@
                                                     </view>
                                                 </view>
                                                 <view wx:if="{{!post.postImages||post.postImages.length===0}}" class="css">
-                                                    <view class="csc p-50 b-timepage br-20" style="min-height:400rpx">
+                                                    <view class="csc p-50 b-timepage br-20" style="min-height:300rpx">
                                                         <view class="line-5-center fs-40 fw-700 c-white">{{post.topic}}</view>
                                                     </view>
                                                     
@@ -252,6 +258,32 @@
                                                 
                                                 <view class="h-10"></view>
 
+                                            </view>
+                                            <view class="rss">
+                                                    <view class="css" style="flex:1">
+                                            
+                                                        <view class="rbc-nowrap ">
+                                                            <view class="rcc pt-20 pb-20">
+                                                                <image class="rcc w-25 h-25" src="/images/daka.png" mode="aspectFill"></image>
+                                                                <view class="w-10"></view>
+                                                                <view class="fs-25 fw-400 c-word-6">第{{post.postTimes}}次在此打卡</view>
+                                                                <view class="w-10"></view>
+                                                                <view hidden="{{post.creator.userId != user.userId  ||  (bindex === 0 && post.postId === pk.topPostId)  }}" class="fs-20 fw-300 pl-10 pr-10 br-5 b-48 c-4" bindtap="removePost" data-post="{{post}}" data-pkid="{{pk.pkId}}" data-index="{{bindex}}">删除</view>
+                                                            </view>
+                                                        
+                                                            <view class="rcc">
+                                                                <view  class="rcc" >
+                                                                        <view wx:if="{{(bindex === 0 && post.postId === pk.topPostId)}}" class="rcc fs-20 c-1 b-48 fw-400 pl-20 pr-20 pt-10 pb-10 br-10" style="pointer-events: none">顶置</view>
+                                                                        <view wx:else class="rcc">
+                                                                            <view class="rcc fs-20 fw-300 line-1-start pl-10 pr-10 pt-5 pb-5 br-5 b-48 c-4">刚刚</view>
+                                                                        </view>
+                                                                </view>
+                                                            </view>
+                                                        </view>
+                                                    
+                                                    </view>
+                                                    
+                            
                                             </view>
                                         </view>
                                     </view>
@@ -262,39 +294,7 @@
         
                         </view>
                     </view>
-                    <view class="rss" >
-                        <view class="rcc" style="width: 16vw">
-
-                            <view class="rcc">
-                                <view class="rcc fs-20 fw-300 line-1-start pl-10 pr-10 pt-5 pb-5 br-5 b-48 c-4">刚刚</view>
-                            </view>
-                        </view>
-                        <view class="rss" style="width:78vw">
-                                <view class="css" style="flex:1">
-                        
-                                    <view class="rbc-nowrap ">
-                                        <view class="rcc pt-20 pb-20">
-                                            <image class="rcc w-25 h-25" src="/images/daka.png" mode="aspectFill"></image>
-                                            <view class="w-10"></view>
-                                            <view class="fs-25 fw-400 c-word-6">第{{post.postTimes}}次在此打卡</view>
-                                            <view class="w-10"></view>
-                                            <view hidden="{{post.creator.userId != user.userId  ||  (bindex === 0 && post.postId === pk.topPostId)  }}" class="fs-20 fw-300 pl-10 pr-10 br-5 b-48 c-4" bindtap="removePost" data-post="{{post}}" data-pkid="{{pk.pkId}}" data-index="{{bindex}}">删除</view>
-                                        </view>
-                                    
-                                        <view class="rcc">
-                                            <view hidden="{{pk.user.userId != user.userId || (post.postImages.length===0 || pk.topPostId === post.postId)}}" class="w-50"></view>
-                                            <view hidden="{{pk.user.userId != user.userId || (post.postImages.length===0 || pk.topPostId === post.postId)}}" bindtap="hiddenPost" data-post="{{post}}" data-pkid="{{pk.pkId}}" data-index="{{bindex}}" class="fs-25 fw-300 pt-20 pb-20">隐藏</view>
-                                            <view hidden="{{pk.user.userId != user.userId || post.postImages.length===0 || pk.topPostId === post.postId}}" class="w-50"></view>
-                                            <view hidden="{{pk.user.userId != user.userId || post.postImages.length===0 || pk.topPostId === post.postId}}" class="fs-25 fw-300 pt-20 pb-20" bindtap="topPost" data-post="{{post}}" data-pkid="{{pk.pkId}}" data-index="{{bindex}}">顶置</view>
-                                            <view hidden="{{!(bindex === 0 && post.postId === pk.topPostId)}}" class="rcc fs-20 c-1 b-48 fw-400 pl-20 pr-20 pt-10 pb-10 br-10" style="pointer-events: none">已顶置</view>
-                                        </view>
-                                    </view>
-                                
-                                </view>
-                                
-        
-                        </view>
-                    </view>
+         
                 </view>
                 <view class="h-30 b-line"></view>
                 <view class="h-30"></view>
@@ -639,10 +639,6 @@
             <image class="w-60 h-60" mode="aspectFit" src="/images/close1.png" bindtap="operateDialog_cancel"></image>
         </view>
     </view>
-
-
-
-
 
 
     <view class="cac pageLoadingDialog " hidden="{{pageLoadingDialog.visible!=true}}">
