--- a/pages/pk/uploadImgs/uploadImgs.wxml
+++ b/pages/pk/uploadImgs/uploadImgs.wxml
@@ -9,9 +9,35 @@
       <view class="rcs " style="height:20px"></view>
     </view>
     <view class="css pr-3vw pl-3vw">
-        <view class="css p-20 " >
+        <view wx:if="{{imgs&&imgs.length>0}}" class="css p-20 " >
             <textarea adjustPosition="true" bindinput="_input" class=" h-150 fs-35 fw-400" cursorSpacing="50" fixed="true" maxlength="{{maxLength}}" placeholder="说点什么..." value="{{text}}"></textarea>
         </view>
+        <view wx:else class="csc b-timepage br-20  p-5vw" style="background-color:#{{currentBack.backColor}}" >
+            <view class="csc h-350 ">
+                <textarea adjustPosition="true" bindinput="_input" auto-height="true" class=" fs-35 fw-700" style="width:84vw;text-align:center;color:#{{currentBack.fontColor}}" cursorSpacing="50" fixed="true" maxlength="{{maxLength}}" placeholder="说点什么..." value="{{text}}"></textarea>
+            </view>
+        </view>
+
+        
+
+        <view hidden="{{imgs&&imgs.length>0}}" class="css pt-20 pb-20 t-line">
+            <scroll-view class="rss br-20" scrollX="true"  enable-flex="true" style="white-space:nowrap;width:94vw;height:12vw">
+                <view class="h-10vw w-10vw br-10 {{currentBack.backId === textBack.backId?'border24':''}} box8"  style="background-color:#{{textBack.backColor}}"   bindtap="select" data-back="{{whiteBack}}" ></view>
+                <view  style="width:1vw"></view>  
+                <view class="css" style="display:inline-block" wx:for="{{textBacks}}" wx:for-index="sindex" wx:for-item="textBack" wx:key="postkey">
+                    <view class="rss">
+                        
+                        <view class="rcc" >
+                            <view class="h-10vw w-10vw br-10 {{currentBack.backId === textBack.backId?'border24 box8':''}}"  style="background-color:#{{textBack.backColor}}"  bindtap="select" data-back="{{textBack}}" ></view>
+                        </view>
+                        <view  style="width:1vw"></view>                                                                                                    
+                    </view>
+                </view>
+            </scroll-view>
+
+
+        </view>    
+
         <view class="rbc p-20 t-line">
             <view class="fs-25 fw-400 c-word-6">第23次打卡</view>
             <view class="fs-20 fw-400 c-3">还可输入{{left}}个字</view>
@@ -104,6 +130,99 @@
 
 <view>
 
+
+    <view class="coverAll" hidden="{{dialog.visible!=true}}"  catchtouchmove="return"></view>
+    <view class="css dialogTip" hidden="{{dialog.visible!=true}}">
+        <view class="css b-white br-20"   >
+            <view class="cbs" style="flex:1">
+                <view class="rcc">
+                     <image class="w-300 h-300" mode="aspectFit" src="{{dialog.tipImg}}"></image>
+                </view>
+                
+                <view class="css">
+                    <view class="rcc fs-40 fw-700 c-tipColor pl-4vw pr-4vw line-3-center">{{dialog.title}}</view>
+                    <view class="h-20"></view>
+                    <view class="rcc-wrap fs-28 fw-400 c-3  pl-4vw pr-4vw  line-3-center">{{dialog.text}}</view> <view class="h-40"></view>
+                </view>
+                <view></view>
+                <view></view>
+                <view class="rcc pt-50 pb-50">
+                    <view class="rcc w-300 h-80 br-80 bTipColor fs-30 fw-400 c-white"  bindtap="dialog_confirm" >知道了</view>
+                </view>
+    
+            </view>
+
+
+        </view>
+        <!-- <view class="rcc p-100">
+            <image class="w-60 h-60" mode="aspectFit" src="/images/close1.png" bindtap="operateDialog_cancel"></image>
+        </view> -->
+    </view>
+    <view class="rcc tipDialog " hidden="{{tipDialog.visible!=true}}">
+        <view class="ccc levelDialog_view">
+            <view class="rcc">
+                <image class="tipDialog_image" mode="aspectFit" src="/images/warn.png" wx:if="{{tipDialog.level==='warn'}}"></image>
+                <image class="tipDialog_image" mode="aspectFit" src="/images/error.png" wx:elif="{{tipDialog.level==='error'}}"></image>
+                <image class="tipDialog_image" mode="aspectFit" src="/images/info.png" wx:else></image>
+            </view>
+            <view style="height:30rpx"></view>
+            <view class="rcc levelDialog_text">{{tipDialog.message}}</view>
+        </view>
+    </view>
+    <view class="coverAll" hidden="{{operateDialog.visible!=true}}"  catchtouchmove="return"></view>
+    <view class="css dialogTip" hidden="{{operateDialog.visible!=true}}">
+        <view class="css b-white br-20"   >
+            <!-- <view class="rcc">
+                <view class="rcc absolute ">
+                    <image class="w-600 h-400" mode="aspectFit" src="{{operateDialog.tipImg}}"></image>
+                </view>
+            </view> -->
+            <view class="cbs" style="flex:1">
+                <view class="rcc">
+                    <image class="w-300 h-300" mode="aspectFit" src="{{operateDialog.tipImg}}"></image>
+                </view>
+                <view class="css">
+                    <view class="rcc fs-40 fw-700 c-tipColor pl-4vw pr-4vw line-3-center">{{operateDialog.title}}</view>
+                    <view class="h-20"></view>
+                    <view class="rcc-wrap fs-28 fw-400 c-3  pl-4vw pr-4vw  line-3-center">{{operateDialog.text}}</view> <view class="h-40"></view>
+                </view>
+
+                <view></view>
+                <view></view>
+
+                <view class="rcc ">
+                    <view class="rcc w-250 h-70 br-20 bTipColor fs-25 fw-400 c-white"  bindtap="operateDialog_confirm" >确定</view>
+                </view>
+                <view class="rcc p-30 fs-25 fw-400 c-3"  bindtap="operateDialog_cancel">知道了</view>
+    
+            </view>
+
+
+        </view>
+        <view class="rcc p-100">
+            <image class="w-60 h-60" mode="aspectFit" src="/images/close1.png" bindtap="operateDialog_cancel"></image>
+        </view>
+    </view>
+
+
+    <view class="cac pageLoadingDialog " hidden="{{pageLoadingDialog.visible!=true}}">
+        <view class="ccc ">
+            <view class="rcc">
+                <image class="pageLoadingDialog_image" mode="aspectFit" src="/images/load.gif"></image>
+            </view>
+            <view class="rcc"></view>
+        </view>
+        <view></view>
+    </view>
+    <view class="cac pageLoadingDialog " hidden="{{pageLoadingDialogError.visible!=true}}">
+        <view></view>
+        <view class="ccc ">
+            <view class="rcc">
+                <image class="pageLoadingDialog_image" mode="aspectFit" src="/images/errorpage.png"></image>
+            </view>
+            <view class="rcc"></view>
+        </view>
+    </view>
     <view catchtouchmove="return" class="coverAll99" hidden="{{labelLoadingDialog.visible!=true}}"></view>
     <view catchtouchmove="return" class="rcc labelLoadingDialog " hidden="{{labelLoadingDialog.visible!=true}}">
         <view class="rcc labelLoadingDialog_view">
@@ -111,7 +230,22 @@
             <view class="labelLoadingDialog_text">加载中</view>
         </view>
     </view>
-
+    <view class="rcc labelLoadingDialog " hidden="{{labelLoadingDialogSuccess.visible!=true}}">
+        <view class="rcc labelLoadingDialog_view">
+            <view class="rcc">
+                <image class="labelLoadingDialog_image" mode="aspectFit" src="/images/loadsuccess.png"></image>
+            </view>
+            <view class="labelLoadingDialog_text">加载成功</view>
+        </view>
+    </view>
+    <view class="rcc labelLoadingDialog " hidden="{{labelLoadingDialogError.visible!=true}}">
+        <view class="rcc labelLoadingDialog_view">
+            <view class="rcc">
+                <image class="labelLoadingDialog_image" mode="aspectFit" src="/images/loadfail.png"></image>
+            </view>
+            <view class="labelLoadingDialog_text">加载失败</view>
+        </view>
+    </view>
 </view>
 
 
