--- a/style/custom2.wxss
+++ b/style/custom2.wxss
@@ -1098,7 +1098,7 @@ mw-200{
   background-image: linear-gradient(to right, #eed755f1 , #e9c708f0 );
 }
 .b-postcard{
-  background-color: rgb(253, 253, 253);
+  background-color: #fdfdfd;
 }
 .b-tip{
   background-color: rgba(233, 233, 233, 0.356);
@@ -1107,7 +1107,7 @@ mw-200{
   background-image: linear-gradient(to bottom, #c3e93bea , #b9e201e8 );
 }
 .b-timepage{
-  background-color: rgba(229, 126, 0, 0.949);
+  background-color: #e57e00;
 }
 .b-drawPost{
   background-color: rgb(37, 35, 35);
@@ -1388,6 +1388,9 @@ mw-200{
 }
 .border23{
   /* border: 1px solid rgba(180, 180, 180, 0.055);  */
+}
+.border24{
+  border: 1px solid rgba(0, 0, 0); 
 }
 .border-group{
   border: 0.5px solid rgba(158, 158, 158, 0.267); 
