--- a/pages/pk/timepage/timepage.wxml
+++ b/pages/pk/timepage/timepage.wxml
@@ -248,14 +248,14 @@
                                                         <image class="rcc br-10" style="width: 25vw;height:25vw" src="{{post.postImages[8].imgUrl}}?x-oss-process=image/resize,w_400,m_lfit" mode="aspectFill"></image>
                                                     </view>
                                                 </view>
-                                                <view wx:if="{{!post.postImages||post.postImages.length===0}}" class="css">
-                                                    <view class="csc p-50 b-timepage br-20" style="min-height:300rpx">
-                                                        <view class="line-5-center fs-40 fw-700 c-white">{{post.topic}}</view>
+
+                                                <view wx:if="{{!post.postImages||post.postImages.length===0}}" class="css br-20" style="background-color:#{{post.backColor}}">
+                                                    <view class="csc p-50 br-20 "  style="min-height:300rpx;background-position: center;background-image: url({{post.backUrl}});background-repeat: no-repeat;background-size: 100% auto;">
+                                                        <text class="{{post.tag?'line-100-center':'line-5-center '}} fs-35 fw-700" bindtap="openText" data-index="{{bindex}}" style="color:#{{post.fontColor}}">{{post.topic}}</text>
                                                     </view>
                                                     
                                                 </view>
-                                                <view wx:else class="{{post.tag?'rus fs-30 fw-500':'rus line-3-start fs-30 fw-500'}} " bindtap="openText" data-index="{{bindex}}" >{{post.topic}}</view>
-                                                
+                                                <view wx:else class="{{post.tag?'':'line-3-start '}} rus fs-30 fw-500" bindtap="openText" data-index="{{bindex}}" >{{post.topic}}</view>
                                                 <view class="h-10"></view>
 
                                             </view>
